# juicy-audio-plugins

./: .gitignore  CMakeLists.txt  README.md
src/plugins/JuicyCohere/: PluginProcessor.cpp  PluginProcessor.h
src/plugins/JuicyInfer/: PluginProcessor.cpp  PluginProcessor.h
src/plugins/JuicyMotion/: PluginProcessor.cpp  PluginProcessor.h
src/plugins/JuicyPunch/: PluginProcessor.cpp  PluginProcessor.h
src/plugins/JuicySaturator/: PluginProcessor.cpp  PluginProcessor.h
src/plugins/JuicyTexture/: PluginProcessor.cpp  PluginProcessor.h
src/plugins/JuicyWidth/: PluginProcessor.cpp  PluginProcessor.h
src/shared/: JuicinessAnalyzer.cpp  JuicinessAnalyzer.h  JuicyMeterPanel.cpp  JuicyMeterPanel.h  JuicyPluginEditor.cpp  JuicyPluginEditor.h
